Fix search bar alignment

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.search-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
